--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,32 +1,123 @@
-<section class="contacts-section">
-  <h2 class="contacts-header">Контакты</h2>
-  <article class="contacts-card">
-    <h3>Cafe</h3>
-    <ul class="contacts-list">
-      <li>
-        <p>Chicago</p>
-        <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+<section class="contacts-section container">
+  <h2 class="contacts-header visually-hidden">Контакты</h2>
+  <div class="contacts-container">
+    <article class="contacts-card">
+      <h3 class="contacts-card-header">Cafe</h3>
+      <ul class="contacts-list">
+        <li class="contacts-list-item">
+          <p>Chicago</p>
+          <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+        </li>
+        <li class="contacts-list-item">
+          <p>Monday - Friday <span>06:00 AM - 10:00 PM</span></p>
+          <p>Saturday - Sunday <span>08:00 AM - 16:00 PM</span></p>
+        </li>
+        <li class="contacts-list-item">
+          <address class="contacts-address">
+            <ul class="contacts-address-list">
+              <li class="contacts-address-item">
+                <a href="tel:+610383766284" class="contacts-address-link"
+                  >+61(0) 383 766 284</a
+                >
+              </li>
+              <li class="contacts-address-item">
+                <a
+                  href="mailto:noreply@envato.com"
+                  class="contacts-address-link"
+                  >noreply@envato.com</a
+                >
+              </li>
+            </ul>
+          </address>
+        </li>
+      </ul>
+    </article>
+
+    <article class="contacts-card">
+      <h3 class="contacts-card-header">Food truck</h3>
+      <ul class="contacts-list">
+        <li class="contacts-list-item">
+          <p>Los Angeles</p>
+          <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+        </li>
+        <li class="contacts-list-item">
+          <p>Monday - Friday <span>06:00 AM - 10:00 PM</span></p>
+          <p>Saturday - Sunday <span>08:00 AM - 16:00 PM</span></p>
+        </li>
+        <li>
+          <address class="contacts-address">
+            <ul class="contacts-address-list">
+              <li class="contacts-address-item">
+                <a href="tel:+610383766284" class="contacts-address-link"
+                  >+61(0) 383 766 284</a
+                >
+              </li>
+              <li class="contacts-address-item">
+                <a
+                  href="mailto:noreply@envato.com"
+                  class="contacts-address-link"
+                  >noreply@envato.com</a
+                >
+              </li>
+            </ul>
+          </address>
+        </li>
+      </ul>
+    </article>
+
+    <article class="contacts-card">
+      <h3 class="contacts-card-header">Cafe</h3>
+      <ul class="contacts-list">
+        <li class="contacts-list-item">
+          <p>Chicago</p>
+          <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+        </li>
+        <li class="contacts-list-item">
+          <p>Monday - Friday <span>06:00 AM - 10:00 PM</span></p>
+          <p>Saturday - Sunday <span>08:00 AM - 16:00 PM</span></p>
+        </li>
+        <li>
+          <address class="contacts-address">
+            <ul class="contacts-address-list">
+              <li class="contacts-address-item">
+                <a href="tel:+610383766284" class="contacts-address-link"
+                  >+61(0) 383 766 284</a
+                >
+              </li>
+              <li class="contacts-address-item">
+                <a
+                  href="mailto:noreply@envato.com"
+                  class="contacts-address-link"
+                  >noreply@envato.com</a
+                >
+              </li>
+            </ul>
+          </address>
+        </li>
+      </ul>
+    </article>
+  </div>
+
+  <div class="contacts-container-btn">
+    <ul class="contacts-btn-list">
+      <li class="contacts-btn-item">
+        <a
+          class="contacts-btn"
+          href="#"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Our Locations</a
+        >
       </li>
-      <li>
-        <p>Monday - Friday 06:00 AM - 10:00 PM</p>
-        <p>Saturday - Sunday 08:00 AM - 16:00 PM</p>
-      </li>
-      <li>
-        <address class="">
-          <ul class="">
-            <li class="">
-              <a href="tel:+610383766284" class="">+61(0) 383 766 284</a>
-            </li>
-            <li class="">
-              <a href="mailto:noreply@envato.com" class=""
-                >noreply@envato.com</a
-              >
-            </li>
-          </ul>
-        </address>
+      <li class="contacts-btn-item">
+        <a
+          class="contacts-btn"
+          href="#"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Franchise</a
+        >
       </li>
     </ul>
-    <p>Chicago</p>
-    <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-  </article>
+  </div>
 </section>
