--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,13 +2,13 @@
   <div class="container header">
     <nav class="header-nav">
       <a class="header-logo" href="index.html"></a>
-      <div class="header-menu-container">
-        <button class="header-close-btn" type="button" data-menu-button>
+      <div class="header-menu-container" data-menu>
+        <button class="header-close-btn" type="button">
         </button>
         <button class="header-order-btn_menu" type="button">Buy now
 
         </button>
-        <ul class="header-menu" data-menu>
+        <ul class="header-menu" >
           <li class="item"><a class="header-menu-link" href="index.html">Home</a></li>
           <li class="item"><a class="header-menu-link" href="">About us</a></li>
           <li class="item"><a class="header-menu-link" href="">How it’s made?</a></li>
