--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -31,6 +31,9 @@
 .header-menu-container {
   @media screen and (max-width: 1199px) {
     display: none;
+    // transform: translateX(100%);
+    // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    // overflow: hidden;
     position: absolute;
     top: 0px;
     right: 0px;
@@ -39,7 +42,6 @@
     background-color: #e17992;
     text-align: center;
     padding: 60px 0px;
-    filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
   }
 
   @include size(desktop) {
@@ -48,6 +50,8 @@
 }
 .header-menu-container.is-open {
   display: block;
+  filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
+  // transform: translateX(0%);
 }
 .header-close-btn {
   position: absolute;
