--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -92,7 +92,12 @@
 }
 
 .hero-button {
+  display: block;
+  width: 62px;
+  height: 24px;
+
   padding: 9px 15px;
+
   text-decoration: none;
 
   margin-right: 8px;
@@ -112,6 +117,9 @@
   }
 
   @include size(desktop) {
+    width: 102px;
+    height: 40px;
+
     margin-right: 15px;
 
     padding: 15px 23px;
@@ -124,7 +132,8 @@
 .hero-button-white {
   color: getColor('accent-color');
   background-color: getColor('white');
-  min-width: 83px;
+
+  width: 83px;
   height: 24px;
 
   &:hover,
@@ -134,7 +143,7 @@
 
   @include size(desktop) {
     margin-right: 15px;
-    min-width: 138px;
+    width: 138px;
     height: 40px;
   }
 }
@@ -171,12 +180,22 @@
 }
 
 .hero-info {
+  position: absolute;
+  top: 96px;
+  right: 44px;
+
+  @include size(desktop) {
+    top: 160px;
+    right: 115px;
+  }
+
   @include size(mobile-only) {
     display: none;
   }
 }
 
 .hero-info-box {
+  margin-bottom: 14px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -185,18 +204,26 @@
 .hero-info-number {
   font-family: Titan One;
 
-  font-size: 46px;
+  font-size: 28px;
   line-height: 1.15;
 
   letter-spacing: 0.04em;
 
   color: getColor('accent-color');
+
+  @include size(desktop) {
+    font-size: 46px;
+  }
 }
 
 .hero-info-text {
   font-weight: normal;
-  font-size: 14px;
+  font-size: 8px;
   line-height: 1.28;
 
   color: getColor('white');
+
+  @include size(desktop) {
+    font-size: 14px;
+  }
 }
